--- a/core/build.gradle
+++ b/core/build.gradle
@@ -9,8 +9,9 @@ dependencies {
 }
 
 android {
-    compileSdkVersion 'android-L'
+    compileSdkVersion 19
     buildToolsVersion '20.0.0'
 }
+
 
 //apply from: 'https://raw.github.com/chrisbanes/gradle-mvn-push/master/gradle-mvn-push.gradle'
