--- a/core/src/main/AndroidManifest.xml
+++ b/core/src/main/AndroidManifest.xml
@@ -17,10 +17,11 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="org.lucasr.twowayview"
+            xmlns:tools="http://schemas.android.com/tools"
           android:versionCode="1"
           android:versionName="Alpha 1" >
 
-    <uses-sdk android:minSdkVersion="4"
-              android:targetSdkVersion="16" />
+    <uses-sdk
+        tools:node="replace" />
 
 </manifest>
